fix: wrong description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fastify-method-not-allowed",
   "version": "1.0.0",
-  "description": "Fastify pluging handling method not found for routes",
+  "description": "Fastify pluging handling method not allowed for routes",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
